feat: love-days

--- a/love-days/index.html
+++ b/love-days/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
   <meta name="theme-color" content="#0b0f17" />
   <title>我们已经在一起多少天了</title>
+  <style type="text/css">
+		@font-face {
+			font-family: digit;
+			src: url('digital.ttf') format("truetype");
+		}
+	</style>
   <meta name="description" content="大鹏子 和 大灵子 的在一起时光计时页面" />
   <link rel="preload" as="audio" href="./music.mp3" />
   <link rel="stylesheet" href="style.css" />
